test-suite/cases/schema/errors/missing-required-field.eure
// Test schema validation error for missing required field

input_eure = ```eure
name = "Alice"
```

schema = ```eure
name = `text`
email = `text`
```

schema_errors = [
  "error: Missing required field 'email' at path $"
]
